--- a/index.html
+++ b/index.html
@@ -1,136 +1,142 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PunterX | Panel de Pronósticos</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>PunterX Panel - VIP y Gratuito</title>
   <style>
     body {
-      font-family: 'Inter', sans-serif;
-      background: #0d1117;
-      color: #c9d1d9;
+      font-family: Arial, sans-serif;
+      background-color: #ffffff;
+      color: #000000;
       margin: 0;
-      padding: 2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      padding: 0;
     }
-    h1 {
-      color: #58a6ff;
-      margin-bottom: 2rem;
+    header {
+      background-color: #1DB954;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      font-size: 24px;
+      font-weight: bold;
     }
-    form {
-      width: 100%;
-      max-width: 700px;
-      background: #161b22;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    .container {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
     }
     label {
       display: block;
-      margin: 1rem 0 0.3rem;
-      color: #c9d1d9;
+      margin-top: 15px;
+      font-weight: bold;
     }
-    input, textarea, select {
+    input[type="text"], textarea {
       width: 100%;
-      padding: 0.75rem;
-      border: none;
-      border-radius: 8px;
-      background: #0d1117;
-      color: #f0f6fc;
-      font-size: 1rem;
+      padding: 10px;
+      margin-top: 5px;
+      border: 1px solid #1DB954;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
+    textarea {
+      resize: vertical;
+      height: 80px;
+    }
+    .section-title {
+      margin-top: 30px;
+      font-size: 20px;
+      border-bottom: 2px solid #1DB954;
+      padding-bottom: 5px;
+    }
+    footer {
+      margin-top: 30px;
+      text-align: center;
+      font-size: 14px;
+      color: #777;
     }
     button {
-      margin-top: 2rem;
-      background-color: #238636;
+      margin-top: 30px;
+      background-color: #1DB954;
       color: white;
       border: none;
-      padding: 1rem 2rem;
-      font-size: 1rem;
-      border-radius: 8px;
+      padding: 12px 20px;
+      font-size: 16px;
+      border-radius: 5px;
       cursor: pointer;
-      transition: background 0.3s;
-    }
-    button:hover {
-      background-color: #2ea043;
-    }
-    .status {
-      margin-top: 1.5rem;
-      font-weight: bold;
-      color: #58a6ff;
+      width: 100%;
     }
   </style>
 </head>
 <body>
-  <h1>PunterX | Enviar Pronóstico</h1>
-  <form id="betForm">
+  <header>PunterX | Panel de Pronósticos Deportivos</header>
+  <div class="container">
+    <div class="section-title">Información Gratuita</div>
     <label for="sport">Deporte</label>
-    <input type="text" id="sport" name="sport" required />
-
+    <input id="sport" type="text" placeholder="Ej. Fútbol, Baloncesto, etc."/>
     <label for="event">Evento / Partido</label>
-    <input type="text" id="event" name="event" required />
-
-    <label for="date">Fecha</label>
-    <input type="text" id="date" name="date" required />
-
+    <input id="event" type="text" placeholder="Ej. Barcelona vs Real Madrid"/>
+    <label for="date">Fecha y Hora (zona horaria)</label>
+    <input id="date" type="text" placeholder="Ej. 28/07/2025 20:00 (GMT-5)"/>
     <label for="bettype">Tipo de Apuesta</label>
-    <input type="text" id="bettype" name="bettype" required />
-
+    <input id="bettype" type="text" placeholder="Ej. Over 2.5 goles, 1X2, etc."/>
     <label for="odds">Cuota</label>
-    <input type="text" id="odds" name="odds" required />
+    <input id="odds" type="text" placeholder="Ej. 1.85"/>
+    <label for="confidence">Nivel de Confianza</label>
+    <input id="confidence" type="text" placeholder="Ej. Alta, Media, Baja"/>
+    <label for="brief">Análisis breve</label>
+    <textarea id="brief" placeholder="Resumen breve del pronóstico..."></textarea>
 
-    <label for="confidence">Confianza</label>
-    <input type="text" id="confidence" name="confidence" required />
-
-    <label for="brief">Análisis Breve</label>
-    <textarea id="brief" name="brief" rows="2"></textarea>
-
-    <label for="detailed">Análisis Detallado</label>
-    <textarea id="detailed" name="detailed" rows="4"></textarea>
-
-    <label for="alternatives">Apuestas Alternativas</label>
-    <textarea id="alternatives" name="alternatives" rows="2"></textarea>
-
+    <div class="section-title">Información Exclusiva VIP</div>
+    <label for="detailed">Análisis detallado</label>
+    <textarea id="detailed" placeholder="Incluye estadísticas, motivación, alineaciones, contexto psicológico, etc."></textarea>
+    <label for="alternatives">Apuestas Alternativas (si las hay)</label>
+    <textarea id="alternatives" placeholder="Otras opciones de apuestas que también tienen valor..."></textarea>
     <label for="bookie">Bookie Sugerida</label>
-    <input type="text" id="bookie" name="bookie" />
-
+    <input id="bookie" type="text" placeholder="Ej. Bet365, Pinnacle, 1xBet, etc."/>
     <label for="value">Valor Detectado</label>
-    <input type="text" id="value" name="value" />
-
+    <input id="value" type="text" placeholder="Ej. Valor por cuota inflada, error de mercado, etc."/>
     <label for="timing">Consejo de Timing</label>
-    <input type="text" id="timing" name="timing" />
+    <input id="timing" type="text" placeholder="Ej. Apostar temprano, esperar alineaciones, etc."/>
+    <label for="notes">Notas adicionales</label>
+    <textarea id="notes" placeholder="Cualquier recomendación o detalle adicional..."></textarea>
 
-    <label for="notes">Notas Adicionales</label>
-    <textarea id="notes" name="notes" rows="2"></textarea>
+    <button id="submitBtn">Enviar Pronóstico</button>
+  </div>
 
-    <button type="submit">Enviar Pronóstico</button>
-    <div class="status" id="status"></div>
-  </form>
+  <footer>PunterX - Predicciones Profesionales en Tiempo Real</footer>
 
   <script>
-    const form = document.getElementById('betForm');
-    const statusDiv = document.getElementById('status');
+    document.getElementById('submitBtn').addEventListener('click', async () => {
+      const data = {
+        sport: document.getElementById('sport').value,
+        event: document.getElementById('event').value,
+        date: document.getElementById('date').value,
+        bettype: document.getElementById('bettype').value,
+        odds: document.getElementById('odds').value,
+        confidence: document.getElementById('confidence').value,
+        brief: document.getElementById('brief').value,
+        detailed: document.getElementById('detailed').value,
+        alternatives: document.getElementById('alternatives').value,
+        bookie: document.getElementById('bookie').value,
+        value: document.getElementById('value').value,
+        timing: document.getElementById('timing').value,
+        notes: document.getElementById('notes').value
+      };
 
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const data = Object.fromEntries(new FormData(form));
       try {
         const response = await fetch('/.netlify/functions/send', {
           method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
         });
-        const result = await response.json();
+
         if (response.ok) {
-          statusDiv.textContent = '✅ Pronóstico enviado correctamente';
-          form.reset();
+          alert('✅ Pronóstico enviado correctamente');
         } else {
-          throw new Error(result.error || 'Error al enviar');
+          alert('❌ Error al enviar pronóstico');
         }
-      } catch (err) {
-        statusDiv.textContent = '❌ Error al enviar pronóstico';
-        console.error(err);
+      } catch (error) {
+        alert('❌ Error de conexión al servidor');
       }
     });
   </script>
