--- a/index.html
+++ b/index.html
@@ -115,36 +115,31 @@
   document.getElementById('submitBtn').addEventListener('click', async () => {
     const authCode = document.getElementById("authCode").value.trim();
     const honeypot = document.getElementById("honeypot").value.trim();
-    const sport = document.getElementById("sport").value.trim();
-    const match = document.getElementById("event").value.trim();
-    const date = document.getElementById("date").value.trim();
-    const bettype = document.getElementById("bettype").value.trim();
-    const odds = document.getElementById("odds").value.trim();
-    const confidence = document.getElementById("confidence").value.trim();
-    const brief = document.getElementById("brief").value.trim();
-    const detailed = document.getElementById("detailed").value.trim();
-    const alternatives = document.getElementById("alternatives").value.trim();
-    const bookie = document.getElementById("bookie").value.trim();
-    const value = document.getElementById("value").value.trim();
-    const timing = document.getElementById("timing").value.trim();
-    const notes = document.getElementById("notes").value.trim();
+
+    // ⏱️ Bloquear si el temporizador aún está activo
+    const lastSent = localStorage.getItem("lastSent");
+    const now = Date.now();
+    if (lastSent && now - parseInt(lastSent) < 60000) {
+      alert("⏳ Por favor espera unos segundos antes de enviar otro pronóstico.");
+      return;
+    }
 
     const data = {
       authCode,
       honeypot,
-      sport,
-      match,
-      date,
-      bettype,
-      odds,
-      confidence,
-      brief,
-      detailed,
-      alternatives,
-      bookie,
-      value,
-      timing,
-      notes
+      sport: document.getElementById("sport").value.trim(),
+      match: document.getElementById("event").value.trim(),
+      date: document.getElementById("date").value.trim(),
+      bettype: document.getElementById("bettype").value.trim(),
+      odds: document.getElementById("odds").value.trim(),
+      confidence: document.getElementById("confidence").value.trim(),
+      brief: document.getElementById("brief").value.trim(),
+      detailed: document.getElementById("detailed").value.trim(),
+      alternatives: document.getElementById("alternatives").value.trim(),
+      bookie: document.getElementById("bookie").value.trim(),
+      value: document.getElementById("value").value.trim(),
+      timing: document.getElementById("timing").value.trim(),
+      notes: document.getElementById("notes").value.trim()
     };
 
     try {
@@ -156,6 +151,7 @@
 
       if (response.ok) {
         alert('✅ Pronóstico enviado correctamente');
+        localStorage.setItem("lastSent", Date.now()); // ⏱️ Actualiza el tiempo del último envío
       } else {
         alert('❌ Error al enviar pronóstico');
       }
