--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>PunterX Panel - VIP y Gratuito</title>
   <style>
     body {
@@ -17,17 +17,15 @@
       color: white;
       padding: 20px;
       text-align: center;
-    }
-    header img {
-      max-height: 60px;
-      vertical-align: middle;
-      margin-right: 10px;
-    }
-    .header-text {
-      display: inline-block;
-      vertical-align: middle;
       font-size: 24px;
       font-weight: bold;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+    }
+    header img {
+      height: 50px;
     }
     .container {
       padding: 20px;
@@ -39,7 +37,7 @@
       margin-top: 15px;
       font-weight: bold;
     }
-    input[type="text"], textarea, input[type="password"] {
+    input[type="text"], textarea {
       width: 100%;
       padding: 10px;
       margin-top: 5px;
@@ -57,19 +55,11 @@
       border-bottom: 2px solid #1DB954;
       padding-bottom: 5px;
     }
-    .vip-logo {
-      margin-top: 20px;
-      text-align: center;
-    }
-    .vip-logo img {
-      max-height: 80px;
-    }
     footer {
       margin-top: 30px;
       text-align: center;
       font-size: 14px;
       color: #777;
-      padding-bottom: 20px;
     }
     button {
       margin-top: 30px;
@@ -82,14 +72,18 @@
       cursor: pointer;
       width: 100%;
     }
+    .vip-logo {
+      display: block;
+      margin: 30px auto 10px;
+      height: 60px;
+    }
   </style>
 </head>
 <body>
   <header>
-    <img src="punterx-canal.png" alt="Logo PunterX">
-    <span class="header-text">PunterX | Panel de Pronósticos Deportivos</span>
+    <img src="https://punterx-panel-vip.netlify.app/img/punterx-canal.png" alt="Logo PunterX"/>
+    PunterX | Panel de Pronósticos Deportivos
   </header>
-
   <div class="container">
     <div class="section-title">Información Gratuita</div>
     <label for="sport">Deporte</label>
@@ -108,9 +102,7 @@
     <textarea id="brief" placeholder="Resumen breve del pronóstico..."></textarea>
 
     <div class="section-title">Información Exclusiva VIP</div>
-    <div class="vip-logo">
-      <img src="punterx-vip.png" alt="Logo VIP">
-    </div>
+    <img class="vip-logo" src="https://punterx-panel-vip.netlify.app/img/punterx-vip.png" alt="Logo VIP"/>
     <label for="detailed">Análisis detallado</label>
     <textarea id="detailed" placeholder="Incluye estadísticas, motivación, alineaciones, contexto psicológico, etc."></textarea>
     <label for="alternatives">Apuestas Alternativas (si las hay)</label>
@@ -128,19 +120,21 @@
     <input type="text" id="honeypot" name="honeypot" style="display:none" autocomplete="off">
     <button id="submitBtn">Enviar Pronóstico</button>
   </div>
-
   <footer>PunterX - Predicciones Profesionales en Tiempo Real</footer>
 
+  <!-- Script sin modificar -->
   <script>
     document.getElementById('submitBtn').addEventListener('click', async () => {
       const authCode = document.getElementById("authCode").value.trim();
       const honeypot = document.getElementById("honeypot")?.value.trim() || "";
+
       const lastSent = localStorage.getItem("lastSent");
       const now = Date.now();
       if (lastSent && now - parseInt(lastSent) < 60000) {
         alert("⏳ Por favor espera unos segundos antes de enviar otro pronóstico.");
         return;
       }
+
       const requiredFields = ["sport", "event", "date", "bettype", "odds", "confidence"];
       for (let id of requiredFields) {
         const el = document.getElementById(id);
@@ -153,6 +147,7 @@
           el.style.borderColor = "#1DB954";
         }
       }
+
       if (!authCode || authCode !== "PunterX2025") {
         document.getElementById("authCode").style.borderColor = "red";
         alert("🚫 Código de acceso incorrecto");
@@ -160,6 +155,7 @@
       } else {
         document.getElementById("authCode").style.borderColor = "#1DB954";
       }
+
       const data = {
         authCode,
         honeypot,
@@ -175,24 +171,27 @@
         bookie: document.getElementById("bookie").value.trim(),
         value: document.getElementById("value").value.trim(),
         timing: document.getElementById("timing").value.trim(),
-        notes: document.getElementById("notes").value.trim()
+        notes: document.getElementById("notes").value.trim(),
+        timestamp: now
       };
+
       const secret = "X9$Gtp#zD3@LP82mR*vWj5Q!7bCk%N0y";
       const encoder = new TextEncoder();
-      const key = await crypto.subtle.importKey("raw", encoder.encode(secret), { name: "HMAC", hash: "SHA-256" }, false, ["sign"]);
-      const encoded = encoder.encode(JSON.stringify(data));
-      const signature = await crypto.subtle.sign("HMAC", key, encoded);
+      const key = await crypto.subtle.importKey(
+        "raw", encoder.encode(secret), { name: "HMAC", hash: "SHA-256" }, false, ["sign"]
+      );
+      const signature = await crypto.subtle.sign("HMAC", key, encoder.encode(data.timestamp.toString()));
       const hashArray = Array.from(new Uint8Array(signature));
-      const hashHex = hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
+      const signatureHex = hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
+      data.signature = signatureHex;
+
       try {
         const response = await fetch('/.netlify/functions/send', {
           method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-            'X-PX-Signature': hashHex
-          },
+          headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
         });
+
         if (response.ok) {
           alert('✅ Pronóstico enviado correctamente');
           localStorage.setItem("lastSent", Date.now());
