--- a/index.html
+++ b/index.html
@@ -19,13 +19,6 @@
       text-align: center;
       font-size: 24px;
       font-weight: bold;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 15px;
-    }
-    header img {
-      height: 50px;
     }
     .container {
       padding: 20px;
@@ -72,18 +65,10 @@
       cursor: pointer;
       width: 100%;
     }
-    .vip-logo {
-      display: block;
-      margin: 30px auto 10px;
-      height: 60px;
-    }
   </style>
 </head>
 <body>
-  <header>
-    <img src="https://punterx-panel-vip.netlify.app/img/punterx-canal.png" alt="Logo PunterX"/>
-    PunterX | Panel de Pronósticos Deportivos
-  </header>
+  <header>PunterX | Panel de Pronósticos Deportivos</header>
   <div class="container">
     <div class="section-title">Información Gratuita</div>
     <label for="sport">Deporte</label>
@@ -102,7 +87,6 @@
     <textarea id="brief" placeholder="Resumen breve del pronóstico..."></textarea>
 
     <div class="section-title">Información Exclusiva VIP</div>
-    <img class="vip-logo" src="https://punterx-panel-vip.netlify.app/img/punterx-vip.png" alt="Logo VIP"/>
     <label for="detailed">Análisis detallado</label>
     <textarea id="detailed" placeholder="Incluye estadísticas, motivación, alineaciones, contexto psicológico, etc."></textarea>
     <label for="alternatives">Apuestas Alternativas (si las hay)</label>
@@ -117,91 +101,102 @@
     <textarea id="notes" placeholder="Cualquier recomendación o detalle adicional..."></textarea>
 
     <input type="password" id="authCode" placeholder="Código de acceso" required>
-    <input type="text" id="honeypot" name="honeypot" style="display:none" autocomplete="off">
-    <button id="submitBtn">Enviar Pronóstico</button>
+
+<!-- Honeypot: campo invisible para bots -->
+<input type="text" id="honeypot" name="honeypot" style="display:none" autocomplete="off">
+
+<button id="submitBtn">Enviar Pronóstico</button>
+
   </div>
+
   <footer>PunterX - Predicciones Profesionales en Tiempo Real</footer>
 
-  <!-- Script sin modificar -->
   <script>
-    document.getElementById('submitBtn').addEventListener('click', async () => {
-      const authCode = document.getElementById("authCode").value.trim();
-      const honeypot = document.getElementById("honeypot")?.value.trim() || "";
+  document.getElementById('submitBtn').addEventListener('click', async () => {
+    const authCode = document.getElementById("authCode").value.trim();
+    const honeypot = document.getElementById("honeypot")?.value.trim() || "";
 
-      const lastSent = localStorage.getItem("lastSent");
-      const now = Date.now();
-      if (lastSent && now - parseInt(lastSent) < 60000) {
-        alert("⏳ Por favor espera unos segundos antes de enviar otro pronóstico.");
-        return;
-      }
+    // ⏱ Temporizador anti-spam
+    const lastSent = localStorage.getItem("lastSent");
+    const now = Date.now();
+    if (lastSent && now - parseInt(lastSent) < 60000) {
+      alert("⏳ Por favor espera unos segundos antes de enviar otro pronóstico.");
+      return;
+    }
 
-      const requiredFields = ["sport", "event", "date", "bettype", "odds", "confidence"];
-      for (let id of requiredFields) {
-        const el = document.getElementById(id);
-        if (!el.value.trim()) {
-          el.style.borderColor = "red";
-          el.focus();
-          alert("⚠️ Por favor completa todos los campos obligatorios de la sección gratuita.");
-          return;
-        } else {
-          el.style.borderColor = "#1DB954";
-        }
-      }
-
-      if (!authCode || authCode !== "PunterX2025") {
-        document.getElementById("authCode").style.borderColor = "red";
-        alert("🚫 Código de acceso incorrecto");
+    // ⚠️ Validación de campos obligatorios
+    const requiredFields = ["sport", "event", "date", "bettype", "odds", "confidence"];
+    for (let id of requiredFields) {
+      const el = document.getElementById(id);
+      if (!el.value.trim()) {
+        el.style.borderColor = "red";
+        el.focus();
+        alert("⚠️ Por favor completa todos los campos obligatorios de la sección gratuita.");
         return;
       } else {
-        document.getElementById("authCode").style.borderColor = "#1DB954";
+        el.style.borderColor = "#1DB954";
       }
+    }
 
-      const data = {
-        authCode,
-        honeypot,
-        sport: document.getElementById("sport").value.trim(),
-        match: document.getElementById("event").value.trim(),
-        date: document.getElementById("date").value.trim(),
-        bettype: document.getElementById("bettype").value.trim(),
-        odds: document.getElementById("odds").value.trim(),
-        confidence: document.getElementById("confidence").value.trim(),
-        brief: document.getElementById("brief").value.trim(),
-        detailed: document.getElementById("detailed").value.trim(),
-        alternatives: document.getElementById("alternatives").value.trim(),
-        bookie: document.getElementById("bookie").value.trim(),
-        value: document.getElementById("value").value.trim(),
-        timing: document.getElementById("timing").value.trim(),
-        notes: document.getElementById("notes").value.trim(),
-        timestamp: now
-      };
+    // 🔐 Validación del código de acceso
+    if (!authCode || authCode !== "PunterX2025") {
+      document.getElementById("authCode").style.borderColor = "red";
+      alert("🚫 Código de acceso incorrecto");
+      return;
+    } else {
+      document.getElementById("authCode").style.borderColor = "#1DB954";
+    }
 
-      const secret = "X9$Gtp#zD3@LP82mR*vWj5Q!7bCk%N0y";
-      const encoder = new TextEncoder();
-      const key = await crypto.subtle.importKey(
-        "raw", encoder.encode(secret), { name: "HMAC", hash: "SHA-256" }, false, ["sign"]
-      );
-      const signature = await crypto.subtle.sign("HMAC", key, encoder.encode(data.timestamp.toString()));
-      const hashArray = Array.from(new Uint8Array(signature));
-      const signatureHex = hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
-      data.signature = signatureHex;
+    // Construcción de datos
+    const data = {
+      authCode,
+      honeypot,
+      sport: document.getElementById("sport").value.trim(),
+      match: document.getElementById("event").value.trim(),
+      date: document.getElementById("date").value.trim(),
+      bettype: document.getElementById("bettype").value.trim(),
+      odds: document.getElementById("odds").value.trim(),
+      confidence: document.getElementById("confidence").value.trim(),
+      brief: document.getElementById("brief").value.trim(),
+      detailed: document.getElementById("detailed").value.trim(),
+      alternatives: document.getElementById("alternatives").value.trim(),
+      bookie: document.getElementById("bookie").value.trim(),
+      value: document.getElementById("value").value.trim(),
+      timing: document.getElementById("timing").value.trim(),
+      notes: document.getElementById("notes").value.trim()
+    };
 
-      try {
-        const response = await fetch('/.netlify/functions/send', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
-        });
+    // 🔒 Generar firma HMAC SHA256 para validación avanzada
+    const secret = "X9$Gtp#zD3@LP82mR*vWj5Q!7bCk%N0y";
+    const encoder = new TextEncoder();
+    const key = await crypto.subtle.importKey(
+      "raw", encoder.encode(secret), { name: "HMAC", hash: "SHA-256" }, false, ["sign"]
+    );
+    const encoded = encoder.encode(JSON.stringify(data));
+    const signature = await crypto.subtle.sign("HMAC", key, encoded);
+    const hashArray = Array.from(new Uint8Array(signature));
+    const hashHex = hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
 
-        if (response.ok) {
-          alert('✅ Pronóstico enviado correctamente');
-          localStorage.setItem("lastSent", Date.now());
-        } else {
-          alert('❌ Error al enviar pronóstico');
-        }
-      } catch (error) {
-        alert('❌ Error de conexión al servidor');
+    try {
+      const response = await fetch('/.netlify/functions/send', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'X-PX-Signature': hashHex
+        },
+        body: JSON.stringify(data)
+      });
+
+      if (response.ok) {
+        alert('✅ Pronóstico enviado correctamente');
+        localStorage.setItem("lastSent", Date.now());
+      } else {
+        alert('❌ Error al enviar pronóstico');
       }
-    });
-  </script>
+    } catch (error) {
+      alert('❌ Error de conexión al servidor');
+    }
+  });
+</script>
 </body>
 </html>
